<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/full_scrn_act_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="5dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/configure_search"
            android:textColor="@color/white" >
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <CheckBox
                android:id="@+id/randomize_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:enabled="false"
                android:text="@string/randomize"
                android:textColor="@color/dark_gray" >
            </CheckBox>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/ra"
                android:textColor="@color/gray" >
            </TextView>

            <EditText
                android:id="@+id/search_ra"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="149" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/dec"
                android:textColor="@color/gray" >
            </TextView>

            <EditText
                android:id="@+id/search_dec"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="69" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/area"
                android:textColor="@color/gray" >
            </TextView>

            <EditText
                android:id="@+id/search_area"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="numberDecimal"
                android:text="1" >
            </EditText>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="vertical"
        android:padding="5dp" >

        <Button
            android:id="@+id/config_begin_go"
            android:layout_width="176dp"
            android:layout_height="44dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="22dp"
            android:text="@string/go"
            android:textColor="@color/green"
            android:textSize="14dp" />

        <Button
            android:id="@+id/config_begin_cancel"
            android:layout_width="176dp"
            android:layout_height="44dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="22dp"
            android:text="@string/cancel"
            android:textSize="14dp" />
    </LinearLayout>

</LinearLayout>