<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/widget_bg" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/widget_padding" >

        <RelativeLayout
            android:id="@+id/wrap_header"
            android:layout_width="match_parent"
            android:layout_height="30sp" >

            <TextView
                android:id="@+id/area"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/area"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/dec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/area"
                android:text="@string/dec"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/ra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/dec"
                android:text="@string/ra"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="14sp"
                android:layout_below="@id/ra"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:gravity="center_horizontal"
                android:singleLine="true"
                android:text=""
                android:textSize="15sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/wrap_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/wrap_header"
            android:paddingBottom="@dimen/widget_vertical_margin"
            android:paddingLeft="@dimen/widget_horizontal_margin"
            android:paddingRight="@dimen/widget_horizontal_margin"
            android:paddingTop="@dimen/widget_vertical_margin" >

            <ImageView
                android:id="@+id/hst_img"
                android:layout_width="380dp"
                android:layout_height="285dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:background="@drawable/image_bg"
                android:contentDescription="@string/cdesc_hst_img"
                android:scaleType="fitCenter" >
            </ImageView>

            <TextView
                android:id="@+id/hst_img_loading"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:paddingTop="3dp"
                android:shadowColor="@color/blue"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="3"
                android:text="@string/loading_hst_feed"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:textStyle="bold"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/label_credits"
                android:layout_width="wrap_content"
                android:layout_height="12dp"
                android:layout_below="@id/hst_img"
                android:text="@string/credits"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/credits"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_below="@id/label_credits"
                android:ellipsize="none"
                android:text=""
                android:textSize="12sp" />
        </RelativeLayout>
    </RelativeLayout>

</FrameLayout>