<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/full_scrn_act_bg"
    android:padding="@dimen/widget_padding" >

    <LinearLayout
        android:id="@+id/wrap_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_desc"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/wrap_creator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="11dp"
            android:layout_marginRight="11dp"
            android:orientation="horizontal"
            android:padding="5dp" >

            <TextView
                android:id="@+id/creator"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/app_creator"
                android:textColor="@color/green"
                android:textSize="13sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/logo"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:contentDescription="@string/cdesc_lsoft_logo"
                android:scaleType="centerInside"
                android:src="@drawable/longevity_logo" />
        </LinearLayout>

        <TextView
            android:id="@+id/content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="13sp" />
    </LinearLayout>

</ScrollView>